todo list added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Bauhaus Design</title>
 		<link rel="stylesheet" href="style.css">
+		<!-- jQuery import via CDN -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	</head>
     <body>
 		<h1>Bauhaus Design</h1>
