added sections and z index

--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,7 @@
 		a set of sections, which we can navigate through, and each section
 		can be its own shape in the UI/DOM -->
 
-		<section id="overview" class="container">
+		<section id="overview" class="container visible">
 			<header>
 				<h1 class="section-title">Section Title</h1>
 			</header>
@@ -43,7 +43,7 @@
 			</div>
 		</section>
 		
-		<section id="history" class="container">
+		<section id="history" class="container hidden">
 			<header>
 				<h1 class="section-title">Section Title</h1>
 			</header>
@@ -52,7 +52,7 @@
 			</div>
 		</section>
 
-		<section id="graphic-design" class="container">
+		<section id="graphic-design" class="container hidden">
 			<header>
 				<h1 class="section-title">Section Title</h1>
 			</header>
@@ -61,7 +61,7 @@
 			</div>
 		</section>
 
-		<section id="sculpture" class="container">
+		<section id="sculpture" class="container hidden">
 			<header>
 				<h1 class="section-title">Section Title</h1>
 			</header>
@@ -70,7 +70,7 @@
 			</div>
 		</section>
 
-		<section id="textiles" class="container">
+		<section id="textiles" class="container hidden">
 			<header>
 				<h1 class="section-title">Section Title</h1>
 			</header>
@@ -79,7 +79,7 @@
 			</div>
 		</section>
 
-		<section id="architecture" class="container">
+		<section id="architecture" class="container hidden">
 			<header>
 				<h1 class="section-title">Section Title</h1>
 			</header>
@@ -87,5 +87,10 @@
 				<p></p>
 			</div>
 		</section>
+
+		<footer>
+			<!-- Just popping this in here to credit us, fill in the name you wanna use and your website/github/etc -->
+			<p>This website was designed and built by <a href="https://curiositybard.com">Briar Taggart</a> and <a href="https://codepen.io/EllaGriff">E Griffin</a>.</p>
+		</footer>
     </body>
 </html>
