--- a/static/index.html
+++ b/static/index.html
@@ -36,27 +36,48 @@
 		can be its own shape in the UI/DOM -->
 
 		<section id="overview" class="container visible">
-			<header>
-				<h1 class="section-title">Section Title</h1>
-			</header>
+			<svg class="section-svg" height="500" width="500">
+				<rect x="0" y="0" height="500" width="500" />
+				<text class="inner-title" x="200" y="50" height="75" width="100">Title</text>
+				<!-- Testing text using svg: -->
+				<!--<text x="10" y="150" height="350" width="400">
+					<tspan x="10" y="170">Porttitor leo a diam sollicitudin tempor id eu nisl nunc.</tspan>
+					<tspan x="10" y="190">varius morbi enim. Cursus risus at ultrices mi tempus </tspan>
+					<tspan x="10" y="210">pellentesque. Sollicitudin tempor id eu nisl nunc mi</tspan>
+					<tspan x="10" y="230">eget nunc scelerisque viverra mauris in aliquam sem. </tspan>
+					<tspan x="10" y="250">nunc sed id semper. Eget nunc scelerisque viverra </tspan>
+					<tspan x="10" y="270">convallis a cras semper auctor neque vitae tempus quam.  </tspan>
+					<tspan x="10" y="290">fringilla est ullamcorper eget nulla facilisi etiam. </tspan>
+					<tspan x="10" y="310">a cras. Bibendum enim facilisis gravida neque convallis.</tspan>
+				</text>-->
+			</svg>
 			<div class="section-body">
-				<p></p>
+				<!-- Testing text using paragraphs: -->
+				<p class="text-over">
+					Porttitor leo a diam sollicitudin tempor id eu nisl nunc. Feugiat scelerisque varius 
+					morbi enim. Cursus risus at ultrices mi tempus imperdiet nulla malesuada pellentesque. 
+					Sollicitudin tempor id eu nisl nunc mi ipsum faucibus. Cursus eget nunc scelerisque 
+					viverra mauris in aliquam sem. Amet nisl purus in mollis nunc sed id semper. Eget nunc 
+					scelerisque viverra mauris in aliquam sem. Neque convallis a cras semper auctor neque 
+					vitae tempus quam. Facilisis leo vel fringilla est ullamcorper eget nulla facilisi etiam. 
+					Gravida neque convallis a cras. Bibendum enim facilisis gravida neque convallis a cras.
+				</p>
 			</div>
 		</section>
 		
 		<section id="history" class="container hidden">
-			<header>
-				<h1 class="section-title">Section Title</h1>
-			</header>
+			<svg class="section-svg" height="500" width="500">
+				<circle cx="250" cy="250" r="250" />
+			</svg>
 			<div class="section-body">
 				<p></p>
 			</div>
 		</section>
 
 		<section id="graphic-design" class="container hidden">
-			<header>
-				<h1 class="section-title">Section Title</h1>
-			</header>
+			<svg class="section-svg" height="500" width="500">
+				<polygon points="250,0 0,500 500,500" />
+			</svg>
 			<div class="section-body">
 				<p></p>
 			</div>
