--- a/static/index.html
+++ b/static/index.html
@@ -27,10 +27,18 @@
 		<script defer src="scripts.js"></script>
 	</head>
     <body>
-		<header>
+		<div class="grid-container">
+		<header class="header">
 			<h1>Bauhaus Design</h1> <!-- Eventually we should change this line to a css-styled title-->
 		</header>
-
+<nav class="nav">
+<a href="#overview">Overview</a>
+<a href="#history">History</a>
+<a href="#graphic-design">Graphic design</a>
+<a href="#sculpture">Sculpture</a>
+<a href="#textiles">Textiles</a>
+<a href="#architecture">Achitecture</a>
+</nav>
 		<!-- I think the best way to format this would be to have
 		a set of sections, which we can navigate through, and each section
 		can be its own shape in the UI/DOM -->
@@ -110,7 +118,7 @@
 				</div>
 			</section>
 		</main>
-		
+		</div>
 
 		<footer>
 			<!-- Just popping this in here to credit us, fill in the name you wanna use and your website/github/etc -->
